RESOLVED FIXED137105
[WebKit2] Fix build warning in WebKit2/WebProcess module
https://bugs.webkit.org/show_bug.cgi?id=137105
Summary [WebKit2] Fix build warning in WebKit2/WebProcess module
Shivakumar J M
Reported 2014-09-24 22:20:54 PDT
Getting below build warning error when built on latest WK2-EFL port. In file included from /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebKit2/WebProcess/WebPage/WebInspector.cpp:27:0: /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebKit2/WebProcess/WebPage/WebInspector.h:57:10: warning: unused parameter ‘messageReceiverName’ [-Wunused-parameter] void didReceiveInvalidMessage(IPC::Connection*, IPC::StringReference messageReceiverName, IPC::StringReference messageName) { close(); } ^ /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebKit2/WebProcess/WebPage/WebInspector.h:57:10: warning: unused parameter ‘messageName’ [-Wunused-parameter] In file included from /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebKit2/WebProcess/WebPage/WebInspectorUI.cpp:27:0: /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebKit2/WebProcess/WebPage/WebInspectorUI.h:52:10: warning: unused parameter ‘messageReceiverName’ [-Wunused-parameter] void didReceiveInvalidMessage(IPC::Connection*, IPC::StringReference messageReceiverName, IPC::StringReference messageName) { closeWindow(); } ^ /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebKit2/WebProcess/WebPage/WebInspectorUI.h:52:10: warning: unused parameter ‘messageName’ [-Wunused-parameter] [ 90%] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/WebPage/WebPageGroupProxy.cpp.o [ 90%] Building CXX object Source/WebKit2/CMakeFiles/WebKit2.dir/WebProcess/WebPage/VisitedLinkTableController.cpp.o In file included from /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebKit2/WebProcess/WebPage/WebPage.cpp:80:0: /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebKit2/WebProcess/WebPage/WebInspector.h:57:10: warning: unused parameter ‘messageReceiverName’ [-Wunused-parameter] void didReceiveInvalidMessage(IPC::Connection*, IPC::StringReference messageReceiverName, IPC::StringReference messageName) { close(); } ^ /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebKit2/WebProcess/WebPage/WebInspector.h:57:10: warning: unused parameter ‘messageName’ [-Wunused-parameter] In file included from /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebKit2/WebProcess/WebPage/WebPage.cpp:83:0: /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebKit2/WebProcess/WebPage/WebInspectorUI.h:52:10: warning: unused parameter ‘messageReceiverName’ [-Wunused-parameter] void didReceiveInvalidMessage(IPC::Connection*, IPC::StringReference messageReceiverName, IPC::StringReference messageName) { closeWindow(); } ^ /home/shiva.jm/webkit-git/svngitjun13/WebKit/Source/WebKit2/WebProcess/WebPage/WebInspectorUI.h:52:10: warning: unused parameter ‘messageName’ [-Wunused-parameter]
Attachments
Patch (2.33 KB, patch)
2014-09-24 22:27 PDT, Shivakumar J M
no flags
Shivakumar J M
Comment 1 2014-09-24 22:27:18 PDT
Created attachment 238642 [details] Patch Fix build warning by removing unused parameter names
WebKit Commit Bot
Comment 2 2014-09-25 03:51:35 PDT
Comment on attachment 238642 [details] Patch Clearing flags on attachment: 238642 Committed r173951: <http://trac.webkit.org/changeset/173951>
WebKit Commit Bot
Comment 3 2014-09-25 03:51:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.