[WebKit2] Fix build warning in WebKit2/WebProcess module. https://bugs.webkit.org/show_bug.cgi?id=137105

Patch by Shivakumar JM <shiva.jm@samsung.com> on 2014-09-25
Reviewed by Csaba Osztrogonác.

Fix build warning by removing unused parameter names

* WebProcess/WebPage/WebInspector.h:
(WebKit::WebInspector::didReceiveInvalidMessage):
* WebProcess/WebPage/WebInspectorUI.h:
(WebKit::WebInspectorUI::didReceiveInvalidMessage):

Canonical link: https://commits.webkit.org/154916@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173951 268f45cc-cd09-0410-ab3c-d52691b4dbfc